[gd_scene load_steps=10 format=3 uid="uid://c7bv42851svwe"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_boafc"]
[ext_resource type="Texture2D" uid="uid://c0h4e2eclfs04" path="res://Assets/sky.png" id="2_073ne"]
[ext_resource type="Texture2D" uid="uid://dnjhw7thmutq" path="res://Assets/level-menu-tileset.png" id="2_enar8"]
[ext_resource type="Texture2D" uid="uid://716eile12ny6" path="res://Assets/cloud.png" id="3_xh61b"]
[ext_resource type="FontFile" uid="uid://bqp0rnuw3mtk6" path="res://Assets/PixelOperator8.ttf" id="4_d5ypc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wb4yr"]
texture = ExtResource("2_enar8")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rjcl7"]
texture = ExtResource("2_073ne")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2bn12"]
texture = ExtResource("3_xh61b")
texture_region_size = Vector2i(32, 32)
3:1/size_in_atlas = Vector2i(8, 3)
3:1/0 = 0
0:5/size_in_atlas = Vector2i(3, 2)
0:5/0 = 0
4:5/size_in_atlas = Vector2i(4, 2)
4:5/0 = 0
9:5/size_in_atlas = Vector2i(5, 2)
9:5/0 = 0

[sub_resource type="TileSet" id="TileSet_v8fmo"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_rjcl7")
sources/3 = SubResource("TileSetAtlasSource_2bn12")
sources/0 = SubResource("TileSetAtlasSource_wb4yr")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_boafc")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_v8fmo")
format = 2
layer_0/name = "sky"
layer_0/tile_data = PackedInt32Array(0, 2, 0, 65536, 2, 0, 131072, 2, 0, 196608, 2, 0, 262144, 2, 0, 327680, 2, 0, 393216, 2, 0, 1, 2, 0, 65537, 2, 0, 131073, 2, 0, 196609, 2, 0, 262145, 2, 0, 327681, 2, 0, 393217, 2, 0, 2, 2, 0, 65538, 2, 0, 131074, 2, 0, 196610, 2, 0, 262146, 2, 0, 327682, 2, 0, 393218, 2, 0, 3, 2, 0, 65539, 2, 0, 131075, 2, 0, 196611, 2, 0, 262147, 2, 0, 327683, 2, 0, 393219, 2, 0, 4, 2, 0, 65540, 2, 0, 131076, 2, 0, 196612, 2, 0, 262148, 2, 0, 327684, 2, 0, 393220, 2, 0, 5, 2, 0, 65541, 2, 0, 131077, 2, 0, 196613, 2, 0, 262149, 2, 0, 327685, 2, 0, 393221, 2, 0, 6, 2, 0, 65542, 2, 0, 131078, 2, 0, 196614, 2, 0, 262150, 2, 0, 327686, 2, 0, 393222, 2, 0, 7, 2, 0, 65543, 2, 0, 131079, 2, 0, 196615, 2, 0, 262151, 2, 0, 327687, 2, 0, 393223, 2, 0, 8, 2, 0, 65544, 2, 0, 131080, 2, 0, 196616, 2, 0, 262152, 2, 0, 327688, 2, 0, 393224, 2, 0, 9, 2, 0, 65545, 2, 0, 131081, 2, 0, 196617, 2, 0, 262153, 2, 0, 327689, 2, 0, 393225, 2, 0, 10, 2, 0, 65546, 2, 0, 131082, 2, 0, 196618, 2, 0, 262154, 2, 0, 327690, 2, 0, 393226, 2, 0, 11, 2, 0, 65547, 2, 0, 131083, 2, 0, 196619, 2, 0, 262155, 2, 0, 327691, 2, 0, 393227, 2, 0)
layer_1/name = "clouds"
layer_1/tile_data = PackedInt32Array(65539, 196611, 1, 262155, 196611, 1, 131079, 262147, 5, 327685, 3, 5, 10, 3, 5, 393217, 262147, 5)
layer_2/name = "tiles"
layer_2/tile_data = PackedInt32Array(131076, 196608, 0, 196612, 196608, 0, 262148, 196608, 0, 131077, 262144, 0, 131078, 262144, 0, 196613, 262144, 0, 196614, 262144, 0, 262149, 262144, 0, 262150, 262144, 0, 131079, 327680, 0, 196615, 327680, 0, 262151, 327680, 0)

[node name="play_button" type="Button" parent="TileMap"]
offset_left = 144.0
offset_top = 64.0
offset_right = 240.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("4_d5ypc")
text = "Play"
flat = true

[node name="levels_button" type="Button" parent="TileMap"]
offset_left = 144.0
offset_top = 96.0
offset_right = 240.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("4_d5ypc")
text = "Levels"
flat = true

[node name="quit_button" type="Button" parent="TileMap"]
offset_left = 144.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("4_d5ypc")
text = "Quit"
flat = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 108)
zoom = Vector2(3, 3)

[connection signal="pressed" from="TileMap/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TileMap/levels_button" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="TileMap/quit_button" to="." method="_on_quit_button_pressed"]
